<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">rahul_s_application6</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_samosa">Samosa</string>
<string name="lbl_email_address">Email Address</string>
<string name="lbl_dd_mm">DD/MM</string>
<string name="msg_confirm_passwor">Confirm Password</string>
<string name="lbl4">&#127790;</string>
<string name="lbl5">-</string>
<string name="lbl2">&#127828;</string>
<string name="lbl_reset_password">Reset Password</string>
<string name="lbl3">&#127789;</string>
<string name="lbl_540">$540</string>
<string name="lbl_pizza">Pizza</string>
<string name="lbl_card_details">Card details</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="msg_dosamarvis_gmai">dosamarvis@gmail.com</string>
<string name="lbl_your_orders">Your orders</string>
<string name="lbl_log_out">Log Out</string>
<string name="lbl_cvv">CVV</string>
<string name="msg_choose_from_a_w">Choose from a wide range of  delicious meals</string>
<string name="msg_enjoy_delicious">Enjoy Delicious food</string>
<string name="msg_big_boys_cheese">Big boys Cheese burger</string>
<string name="lbl_sausage">Sausage</string>
<string name="msg_toppings_for_yo">Toppings for you</string>
<string name="lbl_pay_now">Pay now</string>
<string name="lbl_change">Change</string>
<string name="lbl_pay_on_arrival">Pay on arrival</string>
<string name="lbl_cancel">Cancel</string>
<string name="msg_sign_in_with_go">Sign-in with Google</string>
<string name="msg_classic_cheesbu">Classic cheesburger</string>
<string name="lbl_23_99">$23.99</string>
<string name="lbl_300cal">300cal</string>
<string name="lbl_regular_bun">Regular Bun</string>
<string name="lbl_your_cart">Your cart</string>
<string name="msg_enter_card_deta">Enter card details</string>
<string name="msg_go_back_to_your">Go back to your order</string>
<string name="lbl_520">$520</string>
<string name="lbl20">+</string>
<string name="lbl_5_10min">5-10min</string>
<string name="lbl_delivery_method">Delivery method</string>
<string name="lbl_payment">Payment</string>
<string name="lbl_burger">Burger</string>
<string name="msg_our_simple_cla">Our simple, classic cheeseburger begins with a 100% pure beef burger seasoned with just a pinch of salt and pepper. The McDonald\u2019s Cheeseburger is topped</string>
<string name="msg_sit_and_relax_w">Sit and relax while your orders is being worked on . It\u2019ll take 5min before you get it</string>
<string name="lbl_order_again">Order again</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="msg_iphone_11_pro10">iPhone 11 Pro / X - 21</string>
<string name="lbl_pending_orders">Pending orders</string>
<string name="msg_iphone_11_pro11">iPhone 11 Pro / X - 22</string>
<string name="msg_good_to_see_you">Good to see you again, enter your details below to continue ordering.</string>
<string name="msg_iphone_11_pro12">iPhone 11 Pro / X - 14</string>
<string name="lbl_password">Password</string>
<string name="msg_iphone_11_pro13">iPhone 11 Pro / X - 24</string>
<string name="msg_iphone_11_pro14">iPhone 11 Pro / X - 26</string>
<string name="msg_iphone_11_pro15">iPhone 11 Pro / X - 27</string>
<string name="msg_pay_with_cash_p">Pay with cash/POS upon arrival</string>
<string name="msg_iphone_11_pro16">iPhone 11 Pro / X - 25</string>
<string name="lbl8">⏰</string>
<string name="lbl9">-</string>
<string name="lbl6">+</string>
<string name="lbl7">&#128293;</string>
<string name="lbl10">+</string>
<string name="lbl_meat_sau">Meat sau</string>
<string name="lbl11">-</string>
<string name="lbl12">+</string>
<string name="lbl13">-</string>
<string name="lbl_enter_password">Enter password</string>
<string name="msg_enter_email_add">Enter email address</string>
<string name="lbl14">+</string>
<string name="lbl_my_profile">My profile</string>
<string name="lbl15">-</string>
<string name="lbl16">+</string>
<string name="msg_iphone_11_pro">iPhone 11 Pro / X - 1</string>
<string name="lbl_subtotal">Subtotal</string>
<string name="lbl17">-</string>
<string name="lbl18">+</string>
<string name="lbl19">-</string>
<string name="lbl_20">$20</string>
<string name="lbl_complete">Complete</string>
<string name="lbl_complete_orders">Complete orders</string>
<string name="msg_137_teaticket_h">137 Teaticket Hwy, East Falmouth MA 2536</string>
<string name="lbl_view_all_29">View all(29)</string>
<string name="lbl_go_to_home">Go to home</string>
<string name="lbl_345">$345</string>
<string name="msg_lekki_phase_1">lekki phase 1, Estate</string>
<string name="msg_order_from_your">Order from your favourite
stores or vendors</string>
<string name="lbl_total">Total</string>
<string name="msg_a_reset_code_ha">A reset code has been sent to your email</string>
<string name="lbl_enter_code">Enter code</string>
<string name="msg_iphone_11_pro6">iPhone 11 Pro / X - 18</string>
<string name="msg_iphone_11_pro7">iPhone 11 Pro / X - 23</string>
<string name="msg_no_10_opp_lekki">No 10 opp lekki phase 1 bridge in sangotedo estate</string>
<string name="msg_iphone_11_pro8">iPhone 11 Pro / X - 19</string>
<string name="msg_iphone_11_pro9">iPhone 11 Pro / X - 20</string>
<string name="msg_iphone_11_pro2">iPhone 11 Pro / X - 13</string>
<string name="msg_iphone_11_pro3">iPhone 11 Pro / X - 15</string>
<string name="msg_iphone_11_pro4">iPhone 11 Pro / X - 16</string>
<string name="msg_iphone_11_pro5">iPhone 11 Pro / X - 17</string>
<string name="lbl_delivery_to">Delivery to</string>
<string name="msg_create_an_accou">Create an account</string>
<string name="lbl_skip">Skip</string>
<string name="lbl_privacy_policy">Privacy policy</string>
<string name="lbl">&#127829;</string>
<string name="msg_medium_cheese_b">Medium cheese burger</string>
<string name="msg_your_order_has">Your order has been successfully placed</string>
<string name="msg_popular_restaur">Popular restaurants</string>
<string name="msg_login_to_your_a">Login to your account</string>
<string name="lbl_go_back_to_home">Go back to home</string>
<string name="msg_big_cheese_burg">Big cheese burger</string>
<string name="lbl_delivery_fee">Delivery Fee</string>
<string name="msg_proceed_to_paym">Proceed to Payment</string>
<string name="lbl_1">1</string>
<string name="lbl_2">2</string>
<string name="lbl_add_to_cart">Add to cart</string>
<string name="lbl_4">4+</string>
<string name="lbl_payment_method">Payment method</string>
<string name="msg_login_to_my_acc">Login to my account</string>
<string name="lbl_marvis_ighedosa">Marvis Ighedosa</string>
<string name="lbl_234_9011039271">+234 9011039271</string>
<string name="lbl_exp_date">Exp date</string>
<string name="lbl_login">login</string>
<string name="lbl_the_macdonalds">The Macdonalds</string>
<string name="lbl_enter_cvv">Enter CVV</string>
<string name="msg_enjoy_instant_d">Enjoy instant delivery and payment</string>
<string name="lbl_enter_email">Enter email</string>
<string name="lbl_forgot_password">Forgot password</string>
<string name="msg_welcome_friend">Welcome friend, enter your details so lets get started in ordering food.</string>
<string name="lbl_more">more</string>
<string name="msg_enter_your_emai">Enter your email address to request a password reset.</string>
<string name="lbl_settings">Settings</string>
<string name="lbl_help">Help</string>
<string name="lbl_cheese">Cheese</string>
<string name="msg_process_to_paym">Process to payment</string>
<string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
</resources>
