<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="iphone11ProX17VM" type="com.rahulsapplication.app.modules.iphone11prox17.data.viewmodel.Iphone11ProX17VM"/>
    </data>
    <LinearLayout android:id="@+id/linearGroup78"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_51">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearGroup79"
                android:layout_gravity="top|start"
                android:layout_height="match_parent"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageIcon"
                    android:layout_height="@dimen/_23pxh"
                    android:layout_marginStart="@dimen/_171pxh"
                    android:layout_width="@dimen/_34pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_icon_1"/>
                <TextView android:gravity="top|start"
                    android:id="@+id/txtSkip"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_112pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:text="@{iphone11ProX17VM.iphone11ProX17Model.txtSkip}"
                    style="@style/txtSkModernistskmodernistregular14" tools:text="@string/lbl_skip"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:gravity="top|start"
            android:id="@+id/txtLoginToYourA"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_44pxh"
            android:layout_marginStart="@dimen/_44pxh"
            android:layout_marginTop="@dimen/_49pxv"
            android:layout_width="wrap_content"
            android:text="@{iphone11ProX17VM.iphone11ProX17Model.txtLoginToYourA}"
            style="@style/txtDMSansbold24" tools:text="@string/msg_login_to_your_a"/>
        <TextView android:gravity="top|start"
            android:id="@+id/txtGoodToSeeYou"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_44pxh"
            android:layout_marginStart="@dimen/_44pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:text="@{iphone11ProX17VM.iphone11ProX17Model.txtGoodToSeeYou}"
            style="@style/txtSkModernistskmodernistregular14_1" tools:text="@string/msg_good_to_see_you"/>
        <LinearLayout android:id="@+id/linearForm"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:gravity="top|start"
                android:id="@+id/txtEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_width="wrap_content"
                android:text="@{iphone11ProX17VM.iphone11ProX17Model.txtEmailAddress}"
                style="@style/txtSkModernistskmodernistregular12" tools:text="@string/lbl_email_address"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_15"
                android:hint="@string/lbl_enter_email"
                android:id="@+id/etEnterEmail"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_23pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@={iphone11ProX17VM.iphone11ProX17Model.etEnterEmailValue}"
                android:textColorHint="@color/gray_500" style="@style/etSolidRoundedOutline_2"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearForm1"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:gravity="top|start"
                android:id="@+id/txtPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_width="wrap_content"
                android:text="@{iphone11ProX17VM.iphone11ProX17Model.txtPassword}"
                style="@style/txtSkModernistskmodernistregular12" tools:text="@string/lbl_password"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_15"
                android:hint="@string/lbl_enter_password"
                android:id="@+id/etEnterPassword"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_23pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@={iphone11ProX17VM.iphone11ProX17Model.etEnterPasswordValue}"
                android:textColorHint="@color/gray_500" style="@style/etSolidRoundedOutline_2"/>
        </LinearLayout>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_radius_20"
            android:drawablePadding="@dimen/_5pxh"
            android:drawableStart="@drawable/img_google_1"
            android:hint="@string/msg_sign_in_with_go"
            android:id="@+id/etSigninWithGo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_85pxh"
            android:layout_marginStart="@dimen/_86pxh"
            android:layout_marginTop="@dimen/_180pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_24pxh"
            android:paddingStart="@dimen/_24pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={iphone11ProX17VM.iphone11ProX17Model.etSigninWithGoValue}"
            android:textColorHint="@color/black_900" style="@style/etSolidRounded"/>
        <LinearLayout android:id="@+id/linearGroup458"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_26pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <FrameLayout android:id="@+id/frameButton"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" style="@style/groupStylecornerRadius">
                <TextView android:gravity="top|center"
                    android:id="@+id/txtCreateAnAccou"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_marginEnd="@dimen/_107pxh"
                    android:layout_marginStart="@dimen/_107pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:text="@{iphone11ProX17VM.iphone11ProX17Model.txtCreateAnAccou}"
                    style="@style/txtSkModernistskmodernistbold14" tools:text="@string/msg_create_an_accou"/>
            </FrameLayout>
            <FrameLayout android:clickable="true"
                android:id="@+id/frameButton1"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent" style="@style/groupStylecornerRadius_1">
                <TextView android:gravity="top|center"
                    android:id="@+id/txtLoginToMyAcc"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_marginEnd="@dimen/_94pxh"
                    android:layout_marginStart="@dimen/_94pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:text="@{iphone11ProX17VM.iphone11ProX17Model.txtLoginToMyAcc}"
                    style="@style/txtSkModernistskmodernistbold16_1" tools:text="@string/msg_login_to_my_acc"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
