<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="iphone11ProX30VM" type="com.rahulsapplication.app.modules.iphone11prox30.data.viewmodel.Iphone11ProX30VM"/>
    </data>
    <LinearLayout android:id="@+id/linearIPhone11Pro"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_51">
        <ImageView android:id="@+id/imageGroup457"
            android:layout_height="@dimen/_165pxh"
            android:layout_marginEnd="@dimen/_95pxh"
            android:layout_marginStart="@dimen/_95pxh"
            android:layout_marginTop="@dimen/_198pxv"
            android:layout_width="@dimen/_185pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_group457}" tools:src="@drawable/img_group457"/>
        <TextView android:gravity="center"
            android:id="@+id/txtYourOrderHas"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_61pxh"
            android:layout_marginStart="@dimen/_62pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="wrap_content"
            android:text="@{iphone11ProX30VM.iphone11ProX30Model.txtYourOrderHas}"
            style="@style/txtDMSansbold24_1" tools:text="@string/msg_your_order_has"/>
        <TextView android:gravity="center"
            android:id="@+id/txtSitAndRelaxW"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_39pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:text="@{iphone11ProX30VM.iphone11ProX30Model.txtSitAndRelaxW}"
            style="@style/txtDMSansregular15_2" tools:text="@string/msg_sit_and_relax_w"/>
        <TextView android:gravity="top|center"
            android:id="@+id/txtGoBackToYour"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_122pxh"
            android:layout_marginStart="@dimen/_122pxh"
            android:layout_marginTop="@dimen/_158pxv"
            android:layout_width="wrap_content"
            android:text="@{iphone11ProX30VM.iphone11ProX30Model.txtGoBackToYour}"
            style="@style/txtRobotoregular14" tools:text="@string/msg_go_back_to_your"/>
        <FrameLayout android:clickable="true"
            android:id="@+id/frameButton"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_31pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="match_parent" style="@style/groupStylecornerRadius">
            <TextView android:gravity="top|center"
                android:id="@+id/txtGoBackToHome"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_113pxh"
                android:layout_marginStart="@dimen/_113pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:text="@{iphone11ProX30VM.iphone11ProX30Model.txtGoBackToHome}"
                style="@style/txtSkModernistskmodernistbold14" tools:text="@string/lbl_go_back_to_home"/>
        </FrameLayout>
    </LinearLayout>
</layout>
